--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,395 @@
-/* место для вашего кода */
+header {
+  display: grid; 
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  width: 1100px;
+  height: 293px;
+  angle: 0 deg;
+  opacity: 1;
+  padding: 92px 50px 96px 50px;
+}
+
+.header__menu {
+  width: 391.4786376953125px;
+  height: 22.00001335144043px;
+  top: 133px;
+  left: 50px;
+  angle: 0 deg;
+  opacity: 1;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 22px;
+  list-style: circle;
+}
+
+.header__links-list-item {
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  leading-trim: NONE;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  width: 148px;
+  height: 105px;
+  top: 92px;
+  left: 478px;
+  angle: 0 deg;
+  opacity: 1;
+  display: block;
+  margin-right: 184px;
+  margin-left: 36.52px;
+}
+
+address {
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  leading-trim: NONE;
+  line-height: 24.3px;
+  letter-spacing: 0%;
+  min-width: 240px;
+  justify-self: end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.cover {
+  display: flex;
+  position: relative;
+  min-height: 757px;
+  angle: 0 deg;
+  opacity: 1;
+  inset: 0;
+  background: url(../images/cover.jpg);
+  background-size: cover;
+  background-position: center;
+  z-index: 0
+}
+
+.overlay {
+  inset: 0;
+  position: absolute;
+  angle: 0 deg;
+  height: 100%;
+  width: 100%;
+  opacity: 0.6;
+  background: #000000;
+  z-index: 1;
+}
+
+.cover__title {
+  font-family: Raleway;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 100px;
+  leading-trim: NONE;
+  line-height: 114.99999999999999%;
+  letter-spacing: 25px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  z-index: 2;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_left {
+  margin-top: 165px;
+  margin-left: 70px;
+  margin-bottom: 25px;
+}
+
+.aligned-text_center {
+  margin-left: 395px;
+  margin-bottom: 25px;
+}
+
+.aligned-text_right {
+  margin-left: 663px;
+}
+
+.cover__description {
+  display: flex;
+  align-items: center;
+  margin-top: 106px;
+  margin-left: 50px;
+}
+
+.cover__description-text {
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 22px;
+  leading-trim: NONE;
+  line-height: 28px;
+  letter-spacing: 0;
+  word-spacing: 18px;
+  text-transform: uppercase;
+  margin-right: 107px;
+}
+
+.bet-button {
+  font-family: Raleway;
+  font-weight: 500;
+  font-style: Medium;
+  font-size: 22px;
+  leading-trim: NONE;
+  line-height: 100%;
+  letter-spacing: 0;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 12px 32px 11px 31px;
+  background: transparent;
+  border: 1px solid #FFFFFF;
+  color: #FFFFFF;
+  margin-right: 50px;
+  z-index: 2;
+}
+
+.lots {
+  margin-top: 180px;
+  margin-bottom: 120px;
+}
+
+.lots__heading {
+  margin-bottom: 27px;
+  margin-left: 40px;
+  font-family: Raleway;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 40px;
+  leading-trim: NONE;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 27px 25px;
+  list-style-type: none;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 596px;
+  margin-bottom: 30px;
+}
+
+.card-link .card {
+  height: 100%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  padding: 48px 40px;
+  inset: 0;
+  position: relative;
+}
+
+.card_type_film {
+  background: url(../images/card-lot-01.jpg);
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
+}
+
+.card_type_book{
+  background: url(../images/card-lot-02.jpg);
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
+}
+
+.card_type_picture {
+  background: url(../images/card-lot-03.jpg);
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
+}
+
+.card__title {
+  font-family: Raleway;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 22px;
+  leading-trim: NONE;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-decoration-style: solid;
+  text-decoration-offset: 0%;
+  text-decoration-thickness: 0%;
+  color: #FFFFFF;
+  margin-bottom: auto;
+  z-index: 2;
+}
+
+.card__text {
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 20px;
+  leading-trim: NONE;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-decoration: none;
+  color: #FFFFFF;
+  z-index: 2;
+}
+
+.lots__look-more-link {
+  margin-left: 40px;
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 20px;
+  leading-trim: NONE;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 334px 718px;
+  margin-bottom: 180px;
+  margin-right: 24px;
+  margin-left: 24px;
+}
+
+.about__logo {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ width: 240px;
+ height: 240px;
+ border-radius: 50%;
+ angle: 0 deg;
+ opacity: 1;
+ background: #000000;
+ margin-top: 35px;
+ margin-left: 47px;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+  angle: 0 deg;
+  opacity: 1;
+  top: 64px;
+  left: 46.48px;
+}
+
+.about__title {
+  margin-top: 136px;
+  margin-left: 90px;
+  font-family: Raleway;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 40px;
+  leading-trim: NONE;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+}
+
+.about__paragraph {
+  margin-left: 359px;
+  white-space: pre;
+}
+
+.about__text {
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 20px;
+  leading-trim: NONE;
+  line-height: 24px;
+  letter-spacing: 0%;
+}
+
+footer {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  width: 1100px;
+  height: 180px;
+  top: 2848px;
+  angle: 0 deg;
+  opacity: 1;
+  padding: 1px 50px 82px 50px;
+}
+
+.footer__menu {
+ width: 163.89999389648438px;
+ height: 64px;
+ top: 1px;
+ left: 468.6px;
+ angle: 0 deg;
+ opacity: 1;
+ border-width: 1px;
+ margin-left: 154.03px;
+}
+
+.footer__menu-list {
+ list-style-type: none;
+}
+
+.footer__menu-list-item {
+ font-family: Raleway;
+ font-weight: 400;
+ font-style: Regular;
+ font-size: 18px;
+ leading-trim: NONE;
+ line-height: 100%;
+ letter-spacing: 0%;
+ text-align: center;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list{
+  display: flex;
+  width: 240px;
+  height: 48px;
+  top: 1px;
+  left: 810px;
+  angle: 0 deg;
+  opacity: 1;
+  gap: 48px;
+  margin-left: 177.5px;
+}
+
+.footer__social-list-item {
+  list-style-type: none;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+  angle: 0 deg;
+  opacity: 1;
+  border-width: 1px;
+}
