--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,10 @@
+body {
+  width: 1100px;
+  min-height: 3028px;
+  angle: 0 deg;
+  opacity: 1;
+}
+
 header {
   display: grid; 
   grid-template-columns: 1fr min-content 1fr;
@@ -29,7 +36,8 @@ header {
   font-size: 18px;
   leading-trim: NONE;
   line-height: 100%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
+  white-space: nowrap;
 }
 
 .header__links-list-item_no-bullit {
@@ -38,6 +46,11 @@ header {
 
 .header__link_active {
   text-decoration: none;
+  margin-right: 13px;
+}
+
+.header__link_no-active {
+  margin-right: 12.52px;
 }
 
 .header__logo {
@@ -57,8 +70,9 @@ address {
   font-size: 18px;
   leading-trim: NONE;
   line-height: 24.3px;
-  letter-spacing: 0%;
-  min-width: 240px;
+  letter-spacing: 0;
+  width: 240px;
+  min-height: 98px;
   justify-self: end;
   display: flex;
   flex-direction: column;
@@ -69,6 +83,7 @@ address {
   display: flex;
   position: relative;
   min-height: 757px;
+  width: 1100px;
   angle: 0 deg;
   opacity: 1;
   inset: 0;
@@ -90,109 +105,140 @@ address {
 }
 
 .cover__title {
+  width: 1000px;
+  min-height: 385px;
+  angle: 0 deg;
+  opacity: 1;
+  margin: 165px 50px 106px 50px;
+}
+
+.aligned-text {
+  display: block;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-style: Bold;
   font-size: 100px;
   leading-trim: NONE;
+  letter-spacing: 30px;
   line-height: 114.99999999999999%;
-  letter-spacing: 25px;
+  text-align: right;
   text-transform: uppercase;
   color: #FFFFFF;
 }
 
-.aligned-text {
-  display: block;
-}
-
 .aligned-text_left {
-  margin-top: 165px;
-  margin-left: 70px;
-  margin-bottom: 25px;
+  width: 286px;
+  min-height: 115px;
+  angle: 0 deg;
+  opacity: 1;
+  margin-bottom: 20px;
 }
 
 .aligned-text_center {
-  margin-left: 395px;
-  margin-bottom: 25px;
+  width: 339px;
+  min-height: 115px;
+  angle: 0 deg;
+  opacity: 1;
+  margin-bottom: 20px;
+  margin-left: 330.5px;
 }
 
 .aligned-text_right {
-  margin-left: 663px;
+  width: 387px;
+  min-height: 115px;
+  angle: 0 deg;
+  opacity: 1;
+  margin-left: 613px;
 }
 
 .cover__description {
   display: flex;
   align-items: end;
-  margin-top: 106px; 
+  width: 1000px;
+  min-height: 51px;
+  angle: 0 deg;
+  opacity: 1;
+  border-width: 1px;
+  margin-top: 106px;
   margin-bottom: 50px;
-  margin-left: -1000px;
+  margin-left: -1050px;
 }
 
 .cover__description-text {
-  font-family: 'Raleway', sans-serif; 
-  font-weight: 400; 
-  font-style:normal;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  font-style: normal;
   font-size: 22px;
-  padding-top: 12px; 
-  padding-bottom: 11px;
-  leading-trim: NONE; 
-  line-height: 28px;   
+  leading-trim: NONE;
+  line-height: 28px;
+  letter-spacing: 0%;
   text-transform: uppercase;
-  word-spacing: 18px;
-  margin-right: 107px;
   width: 637px;
   min-height: 28px;
-  top: 668px;
-  left: 50px;
   angle: 0 deg;
   opacity: 1;
   color: #FFFFFF;
+  margin-top: 12px;
+  margin-bottom: 11px;
+  margin-right: 107px;
+  word-spacing: 18px;
 }
 
 .bet-button {
-  font-family: 'Raleway', sans-serif; 
-  font-weight: 500; 
-  font-style: Medium; 
-  font-size: 22px; 
-  leading-trim: NONE; 
-  line-height: 100%; 
-  text-align: center; 
-  text-transform: uppercase; 
-  text-decoration: none; 
-  padding: 12px 32px 11px 31px; 
-  background: transparent; 
-  border: 1px solid #FFFFFF; 
-  color: #FFFFFF; 
-  margin-right: 50px; 
-  height: 51px;
   width: 256px;
+  min-height: 51px;
   angle: 0 deg;
   opacity: 1;
-  z-index: 2; 
+  border-width: 1px;
+  border: 1px solid #FFFFFF;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  font-style: Medium;
+  font-size: 22px;
+  leading-trim: NONE;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  padding: 12px 32px 11px 31px;
 }
 
 .lots {
+  width: 1052px;
+  min-height: 723px;
+  angle: 0 deg;
+  opacity: 1;
   margin-top: 180px;
   margin-bottom: 120px;
+  margin-left: 24px;
+  margin-right: 24px;
 }
 
 .lots__heading {
-  margin-bottom: 27px;
-  margin-left: 40px;
+  width: 121px;
+  height: 47px;
+  angle: 0 deg;
+  opacity: 1;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-style: Bold;
   font-size: 40px;
   leading-trim: NONE;
   line-height: 100%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
   text-transform: uppercase;
+  margin-top: 0;
+  margin-left: 40px;
+  margin-right: 891px;
+  margin-bottom: 27px;
 }
 
 .lots__card-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 27px 25px;
+  gap: 25px;
   list-style-type: none;
 }
 
@@ -213,7 +259,7 @@ address {
 .card {
   display: flex;
   flex-direction: column;
-  padding: 48px 40px;
+  padding: 48px 40px 48px 40px;
   inset: 0;
   position: relative;
   background-size: cover;
@@ -240,7 +286,7 @@ address {
   font-size: 22px;
   leading-trim: NONE;
   line-height: 120%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
   text-transform: uppercase;
   text-decoration: underline;
   text-decoration-style: solid;
@@ -258,7 +304,7 @@ address {
   font-size: 20px;
   leading-trim: NONE;
   line-height: 120%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
   color: #FFFFFF;
   z-index: 2;
 }
@@ -271,29 +317,35 @@ address {
   font-size: 20px;
   leading-trim: NONE;
   line-height: 100%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
 }
 
 .about {
   display: grid;
-  grid-template-columns: 334px 718px;
+  grid-template-columns: 334px 693px;
   margin-bottom: 180px;
   margin-right: 24px;
   margin-left: 24px;
+  width: 1052px;
+  min-height: 595px;
+  angle: 0 deg;
+  opacity: 1;
 }
 
 .about__logo {
- display: flex;
- justify-content: center;
- align-items: center;
- width: 240px;
- height: 240px;
- border-radius: 50%;
- angle: 0 deg;
- opacity: 1;
- background: #000000;
- margin-top: 35px;
- margin-left: 47px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  angle: 0 deg;
+  opacity: 1;
+  background: #000000;
+  margin-top: 35px;
+  margin-left: 47px;
+  margin-right: 72px;
+  margin-bottom: 320px;
 }
 
 .about__logo-image {
@@ -303,22 +355,42 @@ address {
   opacity: 1;
 }
 
+.about__column {
+  width: 693px;
+  min-height: 449px;
+  angle: 0 deg;
+  opacity: 1;
+  margin-top: 133px;
+  padding-left: 25px;
+}
+
 .about__title {
-  margin-top: 136px;
-  margin-left: 90px;
+  width: 291px;
+  height: 47px;
+  angle: 0 deg;
+  opacity: 1;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-style: Bold;
   font-size: 40px;
   leading-trim: NONE;
   line-height: 100%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
+  white-space: nowrap;
   text-transform: uppercase;
+  margin-bottom: 100px;
+  margin-right: 402px;
 }
 
 .about__paragraph {
-  margin-left: 359px;
-  white-space: pre;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  font-size: 20px;
+  width: 693px;
+  min-height: 312px;
+  angle: 0 deg;
+  opacity: 1;
 }
 
 .about__text {
@@ -328,7 +400,9 @@ address {
   font-size: 20px;
   leading-trim: NONE;
   line-height: 24px;
-  letter-spacing: 0%;
+  letter-spacing: 0;
+  angle: 0 deg;
+  opacity: 1;
 }
 
 footer {
@@ -338,35 +412,44 @@ footer {
   min-height: 180px;
   angle: 0 deg;
   opacity: 1;
-  padding: 1px 50px 82px 50px;
+  padding-top: 1px;
+  padding-right: 50px;
+  padding-bottom: 82px;
+  padding-left: 50px;
 }
 
 .footer__menu {
- width: 163.89999389648438px;
- min-height: 64px;
- angle: 0 deg;
- opacity: 1;
- border-width: 1px;
- margin-left: 154.03px;
+  width: 163.89999389648438px;
+  min-height: 64px;
+  angle: 0 deg;
+  opacity: 1;
+  border-width: 1px;
+  margin-left: 175px;
+  margin-top: 1px;
+  margin-bottom: 115px;
 }
 
 .footer__menu-list {
- list-style-type: none;
+  list-style-type: none;
 }
 
 .footer__menu-list-item {
- font-family: 'Raleway', sans-serif;
- font-weight: 400;
- font-style: normal;
- font-size: 18px;
- leading-trim: NONE;
- line-height: 100%;
- letter-spacing: 0%;
- text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+  leading-trim: NONE;
+  line-height: 115%;
+  letter-spacing: 0;
+  text-align: center;
 }
 
 .footer__menu-link_active {
   text-decoration: none;
+  width: 73.69999694824219px;
+  min-height: 21px;
+  angle: 0 deg;
+  opacity: 1;
 }
 
 .footer__social-list{
