--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 body {
   width: 1100px;
-  min-height: 3028px;
   angle: 0 deg;
   opacity: 1;
 }
@@ -46,11 +45,11 @@ header {
 
 .header__link_active {
   text-decoration: none;
-  margin-right: 13px;
 }
 
 .header__link_no-active {
-  margin-right: 12.52px;
+  margin-right: 12px;
+  padding-left: 8px;
 }
 
 .header__logo {
@@ -73,7 +72,7 @@ address {
   letter-spacing: 0;
   width: 240px;
   min-height: 98px;
-  justify-self: end;
+  justify-self:center;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -81,6 +80,7 @@ address {
 
 .cover {
   display: flex;
+  justify-content: end;
   position: relative;
   min-height: 757px;
   width: 1100px;
@@ -90,6 +90,7 @@ address {
   background: url(../images/cover.jpg);
   background-size: cover;
   background-position: center;
+  padding: 165px 50px 40px 50px;
   z-index: 1;
 }
 
@@ -106,10 +107,9 @@ address {
 
 .cover__title {
   width: 1000px;
-  min-height: 385px;
   angle: 0 deg;
   opacity: 1;
-  margin: 165px 50px 106px 50px;
+  position: absolute;
 }
 
 .aligned-text {
@@ -128,7 +128,6 @@ address {
 
 .aligned-text_left {
   width: 286px;
-  min-height: 115px;
   angle: 0 deg;
   opacity: 1;
   margin-bottom: 20px;
@@ -136,7 +135,6 @@ address {
 
 .aligned-text_center {
   width: 339px;
-  min-height: 115px;
   angle: 0 deg;
   opacity: 1;
   margin-bottom: 20px;
@@ -145,7 +143,6 @@ address {
 
 .aligned-text_right {
   width: 387px;
-  min-height: 115px;
   angle: 0 deg;
   opacity: 1;
   margin-left: 613px;
@@ -153,15 +150,10 @@ address {
 
 .cover__description {
   display: flex;
+  flex-direction: row;
   align-items: end;
-  width: 1000px;
-  min-height: 51px;
-  angle: 0 deg;
-  opacity: 1;
-  border-width: 1px;
-  margin-top: 106px;
-  margin-bottom: 50px;
-  margin-left: -1050px;
+  padding-bottom: 11px;
+  padding-top: 12px;
 }
 
 .cover__description-text {
@@ -171,22 +163,21 @@ address {
   font-size: 22px;
   leading-trim: NONE;
   line-height: 28px;
-  letter-spacing: 0%;
+  letter-spacing: 0;
   text-transform: uppercase;
   width: 637px;
-  min-height: 28px;
+  white-space: nowrap;
+  word-spacing: 18px;
   angle: 0 deg;
   opacity: 1;
   color: #FFFFFF;
-  margin-top: 12px;
-  margin-bottom: 11px;
-  margin-right: 107px;
-  word-spacing: 18px;
+  padding-bottom: 11px;
+  padding-top: 12px;
 }
 
 .bet-button {
   width: 256px;
-  min-height: 51px;
+  height: 51px;
   angle: 0 deg;
   opacity: 1;
   border-width: 1px;
@@ -203,11 +194,11 @@ address {
   text-transform: uppercase;
   color: #FFFFFF;
   padding: 12px 32px 11px 31px;
+  margin-left: 107px;
 }
 
 .lots {
   width: 1052px;
-  min-height: 723px;
   angle: 0 deg;
   opacity: 1;
   margin-top: 180px;
@@ -217,8 +208,7 @@ address {
 }
 
 .lots__heading {
-  width: 121px;
-  height: 47px;
+  width: 100%;
   angle: 0 deg;
   opacity: 1;
   font-family: 'Raleway', sans-serif;
@@ -232,7 +222,7 @@ address {
   margin-top: 0;
   margin-left: 40px;
   margin-right: 891px;
-  margin-bottom: 27px;
+  margin-bottom: 36px;
 }
 
 .lots__card-list {
@@ -259,7 +249,7 @@ address {
 .card {
   display: flex;
   flex-direction: column;
-  padding: 48px 40px 48px 40px;
+  padding: 45px 40px 50px 40px;
   inset: 0;
   position: relative;
   background-size: cover;
@@ -327,7 +317,6 @@ address {
   margin-right: 24px;
   margin-left: 24px;
   width: 1052px;
-  min-height: 595px;
   angle: 0 deg;
   opacity: 1;
 }
@@ -357,16 +346,13 @@ address {
 
 .about__column {
   width: 693px;
-  min-height: 449px;
   angle: 0 deg;
   opacity: 1;
-  margin-top: 133px;
+  margin-top: 138px;
   padding-left: 25px;
 }
 
 .about__title {
-  width: 291px;
-  height: 47px;
   angle: 0 deg;
   opacity: 1;
   font-family: 'Raleway', sans-serif;
@@ -378,7 +364,7 @@ address {
   letter-spacing: 0;
   white-space: nowrap;
   text-transform: uppercase;
-  margin-bottom: 100px;
+  margin-bottom: 105px;
   margin-right: 402px;
 }
 
@@ -388,7 +374,6 @@ address {
   gap: 24px;
   font-size: 20px;
   width: 693px;
-  min-height: 312px;
   angle: 0 deg;
   opacity: 1;
 }
@@ -414,7 +399,6 @@ footer {
   opacity: 1;
   padding-top: 1px;
   padding-right: 50px;
-  padding-bottom: 82px;
   padding-left: 50px;
 }
 
@@ -426,7 +410,6 @@ footer {
   border-width: 1px;
   margin-left: 175px;
   margin-top: 1px;
-  margin-bottom: 115px;
 }
 
 .footer__menu-list {
@@ -446,10 +429,6 @@ footer {
 
 .footer__menu-link_active {
   text-decoration: none;
-  width: 73.69999694824219px;
-  min-height: 21px;
-  angle: 0 deg;
-  opacity: 1;
 }
 
 .footer__social-list{
